fix: white space occured from animation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,10 @@
     cursor: default;
 }
 
+html,
 body{
+    width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
 }
 
